--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  
+}
 
 :root {
     --default-font: "Roboto", system-ui, -apple-system, "Segoe UI", Roboto,
