--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 *{
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
-  
+  padding: 0;  
 }
 body{
   scrollbar-width: none;
@@ -92,6 +91,7 @@ body{
     position: fixed;
     right: 30px;
     bottom: 40px;
+    display: none;
   }
 nav{
 .navbar-brand{
@@ -104,7 +104,7 @@ nav{
     color: var(--nav-color);
     font-size: 18px;
 }
-.navbar-nav .nav-link.active{
+.active{
     color: var(--accent-color) !important;
 }
 }
@@ -734,4 +734,4 @@ transform: rotate(50deg);
           color: var(--heading-color);
           font-family: var(--heading-font);
         }
-       
+     
